tests/baselines/reference/iterableArrayPattern4.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern4.ts(17,1): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern4.ts (1 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var a: Bar, b: Bar[];
    [a, ...b] = new FooIterator
    ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.